# aw-watcher-input-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
src/: main.rs
